# vis_user_tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  basic_usage.cpp  build_script.sh  json.hpp  loader.cpp  loader.h  main.cpp  superbuild.sh  test.json  util.cpp  util.h
AIExample/: CMakeLists.txt  README.md
AIExample/py/: RendererHandler.h  funcs.cpp
AIExample/py/scripts/: test.py
AIExample/script/: basic_loader.ipynb  download.py
AIExample/script/.ipynb_checkpoints/: basic_loader-checkpoint.ipynb
AIExample/src/: main.cpp
AIExample/src/isosurface/: MarchingCube.cpp
GLRenderingApps/py/: CMakeLists.txt  funcs.cpp
GLRenderingApps/src/: main.cpp
examples/: CMakeLists.txt  example_kf_1.json  jsonIOExample.cpp  openglExample.cpp  ospTutorial.cpp  test.json
examples/glad/include/glad/: gl.h
ext/pybind11_json/: pybind11_json.hpp
interactApp/: ArcballCamera.cpp  ArcballCamera.h  CMakeLists.txt  GLFWOSPWindow.cpp  GLFWOSPWindow.h  KeyframeWidget.cpp  KeyframeWidget.h  TransferFunctionWidget.cpp  TransferFunctionWidget.h  clipping_plane.cpp  fixed_cam_vol.cpp  ospVol.cpp  t_simple.json  test.json  test_full.json  test_sphere.json
interactApp/glfwImgui/: imgui_impl_glfw_gl3.cpp
interactApp/glfwImgui/backends/: imgui_impl_glfw.cpp  imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp
interactApp/py/: .#wrap.cpp  CMakeLists.txt  funcs.cpp  wrap.cpp
interactApp/py/scripts/: test.py
jsonSamples/: example_file.json  example_kf_0.json  example_kf_1.json  example_kf_header.json  example_kf_header_2.json  example_w_header.json  test.json
jupter_notebook_example/: Build_video_via_jupyuter_Pania_fly_scan_segmented_V3-scene.ipynb  ImageSliceViewer3D.ipynb  Scene2-bob.xml  animationToolTutorial.ipynb  basic_loader.ipynb  load_ocean_data.ipynb  ocean_view.pvsm  ocean_view_first10.pvsm  test_SS_data.ipynb
jupter_notebook_example/.ipynb_checkpoints/: Build_video_via_jupyuter_Pania_fly_scan_segmented_V3-scene-checkpoint.ipynb  basic_loader-checkpoint.ipynb  test_SS_data-checkpoint.ipynb
jupter_notebook_example/visus/cache/atlantis.sci.utah.edu/80/fly_scan_time-s/: visus.idx
mesh/: rectMesh.cpp  rectMesh.h
offlineApp/: CMakeLists.txt  main.cpp  offlineTest.json  rectMesh.cpp  rectMesh.h  renderer.cpp  renderer.h  test.json
python/: render.py  renderInterface.py  renderVTK.py  run.py  scripting.py  scripting_viewer.py  to_gif.sh
renderingApps/: CMakeLists.txt  GLFWOSPWindow.cpp  GLFWOSPWindow.h  KeyframeWidget.cpp  KeyframeWidget.h  app_params.h  clipping_plane.h  interactiveRender.cpp  offlineRender.cpp
renderingApps/imgui/: imfilebrowser.h  imgui_impl_glfw_gl3.cpp
renderingApps/osprayApps/: ArcballCamera.cpp  CMakeLists.txt  GLFWOSPWindow.cpp  GLFWOSPWindow.h  KeyframeWidget.cpp  KeyframeWidget.h  TransferFunctionWidget.h  interactiveRender.cpp  offlineRender.cpp
renderingApps/py/: CMakeLists.txt  funcs.cpp  osprayApps.cpp  vtkApps.cpp
renderingApps/py/scripts/: test.ipynb
renderingApps/vtkApps/: CMakeLists.txt  SimpleRayCast.cpp  SimpleRayCast.cxx
utilApps/: viewJson.py
